objects/Case.object
<CustomObject>
    <fields>
        <fullName>commit_file_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>commit file field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commit_files_fix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>commit files fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>convert__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>convert</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delete_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>delete test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depth_deplo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth deplo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depth_test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>depth test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>destructive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>destructive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>formula_check__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>master_bug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>master bug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pruebapermisos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>pruebapermisos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>refactor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a description.</description>
        <inlineHelpText>This is the help text</inlineHelpText>
        <label>refactor2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rich__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>test_Schedule_deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test Schedule deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>validatecommit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>validatecommit</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>NA_Research_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>NA - Research</label>
        <queue>NA_Research</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Org_Case_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Case_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Test_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Test LV</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>YYY_list_view</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>YYY list view</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ZZZ_list_view</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>ZZZ list view aaa</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Record_Type</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_2</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Record Type 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_test_commit</fullName>
        <active>true</active>
        <description>this is a VR for testing commits</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Never triggered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>delete_me</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES( CI_Picklist_Test__c , &quot;AAA&quot;)</errorConditionFormula>
        <errorMessage>case validation rule delete me</errorMessage>
    </validationRules>
</CustomObject>